--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>keystone4</title>
+		<title>RPi Open Value Network</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link href="/styles/site.min.css" rel="stylesheet">
 
@@ -27,8 +27,8 @@
 					<div class="container-fluid" role='navigation'>
 						<div class="navbar-header">
               
-							<!-- <a href='/' class='navbar-brand'></a> -->
-              <a href='/' class="navbar-brand"><img src="/images/rpi-ovn-brand-logo.png" style="height: 45px;" /></a>
+							<a href='/' class='navbar-brand'></a>
+              <a href='/'><img src="/images/rpi-ovn-brand-logo.png" style="height: 45px;" /></a>
               
               <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='.navbar-collapse'>
                 <span class='sr-only'>Toggle navigation</span>
