--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -42,13 +42,13 @@
   <div class='container'>
     <div class='row well well-lg'>
       <div class='col-md-6'>
-        <h2>Raspberry Pi Open Value Network</h2>
-        <p class='lead'>ConnextCMS communicates with <a href="http://keystonejs.com/" target="_blank">KeystoneJS</a> via API calls, allowing developers to use front end tools to build their websites.</p>
-        <button type='button' class='btn btn-lg btn-default'>Try the Demo</button>
-        <button type='button' class='btn btn-lg btn-primary'>Clone Your Own Copy</button>
+        <h1>Raspberry Pi Open Value Network</h1>
+        <p class='lead'>RPiOVN.com is an <b>Open Value Network</b> (OVN) for Raspberry Pi programmers. An OVN is much like a co-op. People contributing time to a project can log their time in the <b>Network Resource Planning</b> (NRP) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
+        <button type='button' class='btn btn-lg btn-default'>Learn More</button>
+        <button type='button' class='btn btn-lg btn-primary'>Join Now!</button>
       </div>
       <div class='col-md-6 visible-md visible-lg'>
-        <img class="img-responsive center-block" src='images/connnextCMS-logo.png' alt='ConnextCMS' />
+        <img class="img-responsive center-block" src='images/rpi-ovn-logo.png' alt='RPiOVN Logo' />
       </div>
     </div>
 
