--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -44,8 +44,10 @@
       <div class='col-md-7'>
         <h1>Raspberry Pi Open Value Network</h1>
         <p class='lead'>RPiOVN.com is an <b>Open Value Network</b> (OVN) for Raspberry Pi programmers. An OVN is much like a co-op. People contributing time to a project can log their time in the <b>Network Resource Planning</b> (NRP) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
+        <center>
         <button type='button' class='btn btn-lg btn-default'>Learn More</button>
         <button type='button' class='btn btn-lg btn-primary'>Join Now!</button>
+        </center>
       </div>
       <div class='col-md-5 visible-md visible-lg'>
         <img class="img-responsive center-block" src='images/rpi-ovn-logo.png' alt='RPiOVN Logo' />
