customizing the home page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -43,7 +43,7 @@
     <div class='row well well-lg'>
       <div class='col-md-7'>
         <h1>Raspberry Pi Open Value Network</h1>
-        <p class='lead'>RPiOVN.com is an <b>Open Value Network</b> (OVN) for Raspberry Pi programmers. An OVN is much like a co-op. People contributing time to a project can log their time in the <b>Network Resource Planning</b> (NRP) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
+        <p class='lead'>RPiOVN.com is an <a href="http://christroutner.com/blog/post/open-value-networks" target="_blank">Open Value Network</a> (<b>OVN</b>) for Raspberry Pi programmers. People contributing time to a project can log their time in the <a href="http://rpiovn.com:8000/" target="_blank">Network Resource Planning</a> (<b>NRP</b>) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
         <center>
         <button type='button' class='btn btn-lg btn-default'>Learn More</button>
         <button type='button' class='btn btn-lg btn-primary'>Join Now!</button>
@@ -76,9 +76,6 @@
   </div>
 </section>
 
-<section>
-<h2>Test Area</h2>
-</section>
 
 
 <style>
