working on home page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -57,20 +57,20 @@
     <div class='row text-center features'>
       <div class='col-sm-4 col-xs-10 col-xs-offset-1 col-sm-offset-0'>
         <i class='glyphicon glyphicon-briefcase '></i>
-        <h3>Backbone.js & Require.js</h3>
-        <p>The Backbone.js framework is used to structure the code and Require.js is used to modularize it. Not familiar with these frameworks? Read about both tools in <a href="https://addyosmani.com/backbone-fundamentals/" target="_blank"><i>Developing Backbone.js Applications</i></a>.</p>
+        <h3>Consumer Product Store</h3>
+        <p>When projects reach maturity, they are offered for sale on the store. They are hand-built, fully tested, and shipped with documentation and support.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-random'></i>
-        <h3>Use Front End Dev Tools</h3>
-        <p>ConnextCMS communicates with KeystoneJS via REST API calls using AJAX. This allows developers to use front end tools like Chrome Dev Tools to debug their websites in the browser.</p>
+        <h3>Join A Project</h3>
+        <p>Browse our list of Raspberry Pi based open source projects, or apply to start your own.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-send'></i>
-        <h3>Designed for Digital Ocean Droplets&reg;</h3>
-        <p>You can clone your own working copy of ConnextCMS on a Digital Ocean Droplet. No need to compile from source unless you want to. You can also take advantage of VPS technology like snapshots and redundency.</p>
+        <h3>Log Time in the NRP</h3>
+        <p>Developers and technical writers can record their effort in the NRP accounting software. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale.</p>
       </div>
     </div>
   </div>
