working on home page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -56,21 +56,21 @@
 
     <div class='row text-center features'>
       <div class='col-sm-4 col-xs-10 col-xs-offset-1 col-sm-offset-0'>
-        <i class='glyphicon glyphicon-briefcase '></i>
+        <i class='glyphicon glyphicon-shopping-cart'></i>
         <h3>Consumer Product Store</h3>
-        <p>When projects reach maturity, they are offered for sale on the store. They are hand-built, fully tested, and shipped with documentation and support.</p>
+        <p>When projects reach maturity, they are offered <a href="/">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
-        <i class='glyphicon glyphicon-random'></i>
+        <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p>Browse our list of Raspberry Pi based open source projects, or apply to start your own.</p>
+        <p>Browse <a href="/">our list of Raspberry Pi based open source projects</a>, or apply to start your own.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
-        <i class='glyphicon glyphicon-send'></i>
+        <i class='glyphicon glyphicon-time'></i>
         <h3>Log Time in the NRP</h3>
-        <p>Developers and technical writers can record their effort in the NRP accounting software. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale.</p>
+        <p>Developers and technical writers can record their effort in the <a href="http://rpiovn.com:8000/" target="_blank">NRP accounting software</a>. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale.</p>
       </div>
     </div>
   </div>
