--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -58,13 +58,13 @@
       <div class='col-sm-4 col-xs-10 col-xs-offset-1 col-sm-offset-0'>
         <i class='glyphicon glyphicon-shopping-cart'></i>
         <h3>Consumer Product Store</h3>
-        <p>When projects reach maturity, they are offered <a href="/">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
+        <p>When projects reach maturity, they are offered <a href="/#">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p>Browse <a href="/">our list of Raspberry Pi based open source projects</a>, or apply to start your own.</p>
+        <p>Browse <a href="/#">our list of Raspberry Pi based open source projects</a>, or apply to start your own.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
