working on home page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -58,7 +58,7 @@
       <div class='col-sm-4 col-xs-10 col-xs-offset-1 col-sm-offset-0'>
         <i class='glyphicon glyphicon-shopping-cart'></i>
         <h3>Consumer Product Store</h3>
-        <p>When projects reach maturity, they are offered <a href="/#">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
+        <p>When projects reach maturity, they are offered <a href="#/">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
