--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -64,7 +64,7 @@
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p>Browse <a href="/#">our list of Raspberry Pi based open source projects</a>, or apply to start your own.</p>
+        <p>Browse <a href="#/">our list of Raspberry Pi based open source projects</a>, or <a href="#/">apply to start your own project</a>.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
@@ -112,17 +112,17 @@
   <div class='container'>
     <div class='row'>
       <div class='col-sm-4 col-md-3 col-xs-6'>
-        <h4>Who We Are</h4>
-        <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. <a href='#'>Book your ticket today</a>!</p>
-        <p><a href='#'>More About Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
+        <h4>RPiOVN.com</h4>
+        <p>Please excuse the dust. This website is brand new and undergoing rapid changes. Many links may not work.</p>
+        <p><a href='#/'>More About Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
       </div>
 
       <div class='col-sm-2 col-xs-6 col-md-offset-1'>
         <h4>Links</h4>
         <ul class='list-unstyled'>
-          <li><a href='#'>Home</a></li>
-          <li><a href='#'>Tickets</a></li>
-          <li><a href='#'>Stations</a></li>
+          <li><a href='#/'>Home</a></li>
+          <li><a href='#/'>NRP</a></li>
+          <li><a href='#/'>Projects</a></li>
         </ul>
       </div>
 
@@ -131,23 +131,22 @@
       <div class='col-sm-2 col-xs-6'>
         <h4>Stay in Touch</h4>
         <ul class='list-unstyled'>
-          <li><a href='#'>About</a></li>
-          <li><a href='#'>Contact Us</a></li>
-          <li><a href='#'>Blog</a></li>
-          <li><a href='#'>Twitter</a></li>
-          <li><a href='#'>Facebook</a></li>
+          <li><a href='#/'>About</a></li>
+          <li><a href='#/'>Contact Us</a></li>
+          <li><a href='#/'>Blog</a></li>
+          <li><a href='#/'>Twitter</a></li>
+          <li><a href='#/'>Facebook</a></li>
         </ul>
       </div>
 
       <div class='col-sm-4 col-md-3 col-md-offset-1 col-xs-6'>
         <h4>Contact Us</h4>
         <ul class='list-unstyled'>
-          <li><i class='glyphicon glyphicon-globe'></i> Orlando, FL<li>
-          <li><i class='glyphicon glyphicon-phone'></i> 1-555-blast-off<li>
-          <li><i class='glyphicon glyphicon-envelope'></i> <a href='mailto:#'>blastingoff@codeschool.com</a><li>
+          <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA<li>
+          <li><i class='glyphicon glyphicon-envelope'></i> <a href='mailto:admin@rpiovn.com'>admin@rpiovn.com</a><li>
         </ul>
 
-        <p>Blasting Off With Bootstrap &copy;2214.</p>
+        <p>All website content is open for reuse under the <a href="http://choosealicense.com/licenses/mit/" target="_blank">MIT License</a>.</p>
       </div>
     </div>
   </div>
