working on home page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -70,7 +70,7 @@
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-time'></i>
         <h3>Log Time in the NRP</h3>
-        <p>Developers and technical writers can record their effort in the <a href="http://rpiovn.com:8000/" target="_blank">NRP accounting software</a>. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale.</p>
+        <p>Developers and technical writers can <a href="http://rpiovn.com:8000/" target="_blank">log time</a> and effort in the NRP accounting software. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale. You'll need to <a href="#/">apply for a NRP account</a> before you can begin contributing to projects.</p>
       </div>
     </div>
   </div>
