--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -64,7 +64,7 @@
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p>Browse <a href="#/">our list of Raspberry Pi based open source projects</a>, or <a href="#/">apply to start your own project</a>.</p>
+        <p><a href="#/">Browse our list of Raspberry Pi based open source projects</a>, or <a href="#/">apply to start your own project</a>.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
@@ -142,7 +142,7 @@
       <div class='col-sm-4 col-md-3 col-md-offset-1 col-xs-6'>
         <h4>Contact Us</h4>
         <ul class='list-unstyled'>
-          <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA<li>
+          <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA, USA<li>
           <li><i class='glyphicon glyphicon-envelope'></i> <a href='mailto:admin@rpiovn.com'>admin@rpiovn.com</a><li>
         </ul>
 
