--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -49,6 +49,7 @@
                 </ul>
               </li>
               
+              <!--
               <li class='dropdown'>
                 <a href='/#' data-target='#' class='dropdown-toggle' data-toggle='dropdown' data-hover='dropdown'>About <span class='caret'></span></a>
                 <ul class='dropdown-menu' role='menu'>
@@ -60,9 +61,13 @@
                   <li><a href='#'>Twitter</a></li>
                   <li><a href='#'>Facebook</a></li>
                 </ul>
-              </li>      
+              </li>
+              -->
+              
+              <li><a href="http://rpiovn.com/blog">Blog</a></li>
               
               <!-- KeystoneJS default menu items. -->
+              <!--
               <li class='dropdown'>
                 <a href='/#' data-target='#' class='dropdown-toggle' data-toggle='dropdown' data-hover='dropdown'>KeystoneLinks <span class='caret'></span></a>
                 <ul class='dropdown-menu' role='menu'>
@@ -73,6 +78,7 @@
 								  {{/each}}                  
                 </ul>
               </li> 
+              -->
               
               <!-- Sign-Out and Sign-In Menu link. -->
               {{#if user}}
