--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -43,7 +43,7 @@
     <div class='row well well-lg'>
       <div class='col-md-7'>
         <h1>Raspberry Pi Open Value Network</h1>
-        <p class='lead'>RPiOVN.com is an <a href="http://christroutner.com/blog/post/open-value-networks" target="_blank">Open Value Network</a> (<b>OVN</b>) for Raspberry Pi programmers. People contributing time to a project can log their time in the <a href="http://rpiovn.com:8000/" target="_blank">Network Resource Planning</a> (<b>NRP</b>) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
+        <p class='lead'>RPiOVN.com is an <a href="http://rpiovn.com/blog/post/what-is-an-open-value-network">Open Value Network</a> (<b>OVN</b>) for Raspberry Pi programmers. People contributing time to a project can log their time in the <a href="http://rpiovn.com:8000/" target="_blank">Network Resource Planning</a> (<b>NRP</b>) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
         <center>
         <button type='button' class='btn btn-lg btn-default'>Learn More</button>
         <button type='button' class='btn btn-lg btn-primary'>Join Now!</button>
@@ -64,7 +64,7 @@
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p><a href="#/">Browse our list of Raspberry Pi based open source projects</a>, or <a href="#/">apply to start your own project</a>.</p>
+        <p><a href="http://rpiovn.com/page/browse-projects">Browse our list of Raspberry Pi based open source projects</a>, or <a href="http://rpiovn.com/page/start-a-project">apply to start your own project</a>.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
