--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -120,9 +120,9 @@
       <div class='col-sm-2 col-xs-6 col-md-offset-1'>
         <h4>Links</h4>
         <ul class='list-unstyled'>
-          <li><a href='#/'>Home</a></li>
-          <li><a href='#/'>NRP</a></li>
-          <li><a href='#/'>Projects</a></li>
+          <li><a href='http://rpiovn.com/'>Home</a></li>
+          <li><a href='http://rpiovn.com:8000/'>NRP</a></li>
+          <li><a href='http://rpiovn.com/page/browse-projects'>Projects</a></li>
         </ul>
       </div>
 
