--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -64,13 +64,13 @@
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p><a href="http://rpiovn.com/page/browse-projects">Browse our list of Raspberry Pi based open source projects</a>, or <a href="http://rpiovn.com/page/start-a-project">apply to start your own project</a>.</p>
+        <p>What to participate? Read this guide on <a href="http://rpiovn.com/page/how-it-works">how it all works</a>, then <a href="http://rpiovn.com/page/browse-projects">browse our list of Raspberry Pi based open source projects</a>, or <a href="http://rpiovn.com/page/start-a-project">apply to start your own project</a>.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-time'></i>
         <h3>Log Time in the NRP</h3>
-        <p>Developers and technical writers can <a href="http://rpiovn.com:8000/" target="_blank">log time</a> and effort in the NRP accounting software. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale. You'll need to <a href="#/">apply for a NRP account</a> before you can begin contributing to projects.</p>
+        <p>Developers and technical writers can <a href="http://rpiovn.com:8000/" target="_blank">log time</a> and effort in the NRP accounting software. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale. You'll need to <a href="http://rpiovn.com/page/create-nrp-account">apply for a NRP account</a> before you can begin contributing to projects.</p>
       </div>
     </div>
   </div>
