Adding working links to the home page.

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -131,11 +131,13 @@
       <div class='col-sm-2 col-xs-6'>
         <h4>Stay in Touch</h4>
         <ul class='list-unstyled'>
-          <li><a href='#/'>About</a></li>
-          <li><a href='#/'>Contact Us</a></li>
-          <li><a href='#/'>Blog</a></li>
+          <li><a href='http://rpiovn.com/page/how-it-works'>About</a></li>
+          <li><a href='http://rpiovn.com/page/contact-us-1'>Contact Us</a></li>
+          <li><a href='http://rpiovn.com/blog'>Blog</a></li>
+          <!--
           <li><a href='#/'>Twitter</a></li>
           <li><a href='#/'>Facebook</a></li>
+          -->
         </ul>
       </div>
 
@@ -143,10 +145,10 @@
         <h4>Contact Us</h4>
         <ul class='list-unstyled'>
           <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA, USA<li>
-          <li><i class='glyphicon glyphicon-envelope'></i> <a href='mailto:admin@rpiovn.com'>admin@rpiovn.com</a><li>
+          <li><i class='glyphicon glyphicon-envelope'></i> <a href='http://rpiovn.com/page/contact-us-1'>Contact Us</a><li>
         </ul>
 
-        <p>All website content is open for reuse under the <a href="http://choosealicense.com/licenses/mit/" target="_blank">MIT License</a>.</p>
+        <p>All website content is open for reuse under the <a href="http://choosealicense.com/licenses/mit/" target="_blank">MIT License</a> and available as a <a href="https://github.com/christroutner/rpiovn" target="_blank">GitHub repository</a>.</p>
       </div>
     </div>
   </div>
