Adding working links to the home page.

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -114,7 +114,7 @@
       <div class='col-sm-4 col-md-3 col-xs-6'>
         <h4>RPiOVN.com</h4>
         <p>Please excuse the dust. This website is brand new and undergoing rapid changes. Many links may not work.</p>
-        <p><a href='#/'>More About Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
+        <p><a href='http://rpiovn.com/page/how-it-works'>More About Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
       </div>
 
       <div class='col-sm-2 col-xs-6 col-md-offset-1'>
