--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -45,7 +45,7 @@
         <h1>Raspberry Pi Open Value Network</h1>
         <p class='lead'>RPiOVN.com is an <a href="http://rpiovn.com/blog/post/what-is-an-open-value-network">Open Value Network</a> (<b>OVN</b>) for Raspberry Pi programmers. People contributing time to a project can log their time in the <a href="http://rpiovn.com:8000/" target="_blank">Network Resource Planning</a> (<b>NRP</b>) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
         <center>
-        <button type='button' class='btn btn-lg btn-default'>Learn More</button>
+        <button type='button' class='btn btn-lg btn-default' href="http://rpiovn.com/page/how-it-works">Learn More</button>
         <button type='button' class='btn btn-lg btn-primary'>Join Now!</button>
         </center>
       </div>
