Adding links to call-to-action buttons.

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -46,7 +46,7 @@
         <p class='lead'>RPiOVN.com is an <a href="http://rpiovn.com/blog/post/what-is-an-open-value-network">Open Value Network</a> (<b>OVN</b>) for Raspberry Pi programmers. People contributing time to a project can log their time in the <a href="http://rpiovn.com:8000/" target="_blank">Network Resource Planning</a> (<b>NRP</b>) software. When products are sold, profit is distributed fairly based on time contributed to that project.</p>
         <center>
         <a class='btn btn-lg btn-default' href="http://rpiovn.com/page/how-it-works">Learn More</a>
-        <button type='button' class='btn btn-lg btn-primary'>Join Now!</button>
+        <a class='btn btn-lg btn-primary' href="http://rpiovn.com/page/create-nrp-account">Join Now!</a>
         </center>
       </div>
       <div class='col-md-5 visible-md visible-lg'>
