--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -304,6 +304,12 @@
           
           <div class="container" id="sectionsView" hidden>            
           </div>
+          
+          <div class="container" id="nrpUsersView" hidden>            
+          </div>
+          
+          <div class="container" id="nrpProjectsView" hidden>            
+          </div>
 
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
