Adding NRP User model, view, template, etc.

--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -27,7 +27,7 @@ hr {
           <th scope=row>Username</th> 
           <td class="userName"></td> 
           <td class="userNameEmail"></td> 
-          <td class="btnApprove"><button type="button" class="btn btn-primary" onclick="global.nrpUsersView.approveUser()">Approve</button></td> 
+          <td class="btnApprove"><button type="button" class="btn btn-success">Approve</button></td> 
           <td class="btnDelete"><button type="button" class="btn btn-danger" onclick="global.nrpUsersView.deleteUser()">Delete</button></td> 
         </tr> 
       </tbody> 
