--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -35,7 +35,7 @@ hr {
   </div>
 </div>
 
-<div class="row" id="newUserForm">
+<div class="row" id="newUserForm" hidden>
   <div class="col-md-12">
     <hr>
     <h2>
