Adding new user creation form to NRP User View

--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -44,7 +44,7 @@ hr {
     <form action="http://192.241.198.211:8000/api/usercreation/" method="POST" enctype="multipart/form-data" class="form-horizontal">                                          
       <fieldset>
 
-        <div style='display:none'><input type='hidden' name='csrfmiddlewaretoken' value='gve4seyHbMkZyxb75DV5al1ReRleELC1' /></div>
+        <div style='display:none'><input type='hidden' id='csrfmiddlewaretoken' name='csrfmiddlewaretoken' value='gve4seyHbMkZyxb75DV5al1ReRleELC1' /></div>
 
         <div class="control-group">
             <label for="username" class="control-label">username:</label>
