Adding new user creation form to NRP User View

--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -35,7 +35,7 @@ hr {
   </div>
 </div>
 
-<div class="row" id="csrfTokenInput" hidden>
+<div class="row" id="csrfTokenInputForm" hidden>
   <div class="col-md-12">
     <form class="form-horizontal">
       <label for="csrfTokenInput" class="control-label">CSRF Token:</label>
