Adding new user creation form to NRP User View

--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -28,7 +28,8 @@ hr {
           <td class="userName"></td> 
           <td class="userNameEmail"></td> 
           <td class="btnApprove"><button type="button" class="btn btn-success">Approve</button></td> 
-          <td class="btnDelete"><button type="button" class="btn btn-danger" onclick="global.nrpUsersView.deleteUser()">Delete</button></td> 
+          <!-- <td class="btnDelete"><button type="button" class="btn btn-danger" onclick="global.nrpUsersView.deleteUser()">Delete</button></td> -->
+          <td class="btnDelete"><button type="button" class="btn btn-danger">Delete</button></td> 
         </tr> 
       </tbody> 
     </table>
