Adding new user creation form to NRP User View

--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -106,7 +106,7 @@ hr {
         </div>
       </fieldset>
     </form>
-    <button class="btn btn-primary" onclick="global.nrpUsersView.submitNewUserForm()">Submit</button>
+    <!-- <button class="btn btn-primary" onclick="global.nrpUsersView.submitNewUserForm()">Submit</button> -->
     
     <center><b><p id="successMsgUpload" style="color: red;"></p></b></center>
   </div>
