--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -16,18 +16,18 @@ hr {
       <thead> 
         <tr> 
           <th>Username</th> 
+          <th>User Account</th> 
+          <th>Economic Agent</th> 
           <th>-</th> 
-          <th>-</th> 
-          <th>-</th> 
-          <th>-</th>
+          <th>Delete</th>
         </tr> 
       </thead> 
       <tbody id="nrpUsersTable"> 
         <tr id="nrpUserRow" hidden> 
           <th scope=row>Username</th> 
           <td class="userName"></td> 
-          <td class="userNameEmail"></td> 
-          <td class="btnApprove"><button type="button" class="btn btn-success">Approve</button></td> 
+          <td class="btnApprove"><button type="button" class="btn btn-success">Approve Account</button></td>  
+          <td class="btnApprove2"><button type="button" class="btn btn-success">Approve Agent</button></td> 
           <!-- <td class="btnDelete"><button type="button" class="btn btn-danger" onclick="global.nrpUsersView.deleteUser()">Delete</button></td> -->
           <td class="btnDelete"><button type="button" class="btn btn-danger">Delete</button></td> 
         </tr> 
