Adding Econoic Agent form to NRP Users View

--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -16,9 +16,9 @@ hr {
       <thead> 
         <tr> 
           <th>Username</th> 
+          <th>Email</th> 
           <th>User Account</th> 
           <th>Economic Agent</th> 
-          <th>-</th> 
           <th>Delete</th>
         </tr> 
       </thead> 
@@ -26,7 +26,7 @@ hr {
         <tr id="nrpUserRow" hidden> 
           <th scope=row>Username</th> 
           <td class="userName"></td> 
-          <td class="btnApprove"><button type="button" class="btn btn-success">Approve Account</button></td>  
+          <td class="btnApprove1"><button type="button" class="btn btn-success">Approve Account</button></td>  
           <td class="btnApprove2"><button type="button" class="btn btn-success">Approve Agent</button></td> 
           <!-- <td class="btnDelete"><button type="button" class="btn btn-danger" onclick="global.nrpUsersView.deleteUser()">Delete</button></td> -->
           <td class="btnDelete"><button type="button" class="btn btn-danger">Delete</button></td> 
