--- a/public/js/app/templates/NRPUsers.html
+++ b/public/js/app/templates/NRPUsers.html
@@ -12,6 +12,16 @@ hr {
 
 <div class="row">
   <div class="col-md-12">
+      <br>
+      <p>
+        The process for approving a new user is as follows:
+        <ol>
+            <li>Approve the <b>User Account</b> by clicking the approve button. When complete, come back and click the delete button to clear the entry.</li>
+            <li>Approve the <b>Economic Agent</b> to create a new agent for this user. When complete, come back and click the delete button to clear the entry.</li>
+            <li>Log into the NRP Admin area and go to the Economic Agents page. Link the economic agent to the user account. (Working on automatiting this part)</li>
+        </ol>
+      </p>
+      <br>
     <table class="table table-striped"> 
       <thead> 
         <tr> 
