Adding NRP Projects View functionality.

--- a/public/js/app/templates/NRPProjects.html
+++ b/public/js/app/templates/NRPProjects.html
@@ -22,7 +22,7 @@ hr {
         </tr> 
       </thead> 
       <tbody id="nrpProjectsTable"> 
-        <tr id="nrpProjectsRow" hidden> 
+        <tr id="nrpProjectRow" hidden> 
           <th scope=row>Project Name</th>  
           <td class="projectName"></td> 
           <td class="btnApprove"><button type="button" class="btn btn-success">Approve</button></td> 
