Adding NRP Projects View functionality.

--- a/public/js/app/templates/NRPProjects.html
+++ b/public/js/app/templates/NRPProjects.html
@@ -57,7 +57,7 @@ hr {
         <div style='display:none'><input type='hidden' id='csrfmiddlewaretoken' name='csrfmiddlewaretoken' value='gve4seyHbMkZyxb75DV5al1ReRleELC1' /></div>
 
         <div class="control-group">
-            <label for="url" class="control-label">username:</label>
+            <label for="url" class="control-label">url:</label>
             <div class="controls">
                 <input type="text" name="url" id="url" />
             </div>
