fixing left menu in dashboard to match appearence of modern ConnextCMS.

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">  
 
-    <title>RPiOVN - Log Your Work</title>
+    <title>Log Your Work - RPi-OVN</title>
 
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -71,9 +71,9 @@
         <!-- Logo -->
         <a href="/dashboard" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>CMS</b></span>
+          <span class="logo-mini"><b>RPiOVN</b></span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg" style="font-size: 12px;">ConnextCMS</span>
+          <span class="logo-lg" style="font-size: 12px;">RPi-OVN</span>
         </a>
 
         <!-- Header Navbar -->
