Adding RPi logo to log-work collapsable left menu

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -73,7 +73,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>RPiOVN</b></span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg" style="font-size: 12px;"><img src="/images/RPiLogo.png"</span>
+          <span class="logo-lg" style="font-size: 12px;"><img src="/images/RPiLogo.png" class="img-responsive center-block"/></span>
         </a>
 
         <!-- Header Navbar -->
