Adding RPi logo to log-work collapsable left menu

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -71,9 +71,9 @@
         <!-- Logo -->
         <a href="/dashboard" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>RPiOVN</b></span>
+          <span class="logo-mini"><img src="/images/RPiLogo.png" class="img-responsive center-block"/></span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg" style="font-size: 12px;"><img src="/images/RPiLogo.png" class="img-responsive center-block"/></span>
+          <span class="logo-lg" style="font-size: 12px;">RPi-OVN</span>
         </a>
 
         <!-- Header Navbar -->
