customizing /logwork dashboard

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -38,7 +38,7 @@
         //requests instead of three.
         requirejs(['../js/cms_common'], function (common) {
             
-            requirejs(['../../../js/app/main_dashboard_app']);
+            requirejs(['../../../js/logwork/logwork_app']);
         });
     </script>
   </head>
@@ -69,7 +69,7 @@
       <header class="main-header">
 
         <!-- Logo -->
-        <a href="/dashboard" class="logo">
+        <a href="/logwork" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><img src="/images/RPiLogo.png" class="img-responsive center-block"/></span>
           <!-- logo for regular state and mobile devices -->
