customizing /logwork dashboard

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -38,7 +38,7 @@
         //requests instead of three.
         requirejs(['../js/cms_common'], function (common) {
             
-            requirejs(['../../../js/logwork/logwork_app']);
+            requirejs(['../js/logwork/logwork_app']);
         });
     </script>
   </head>
