customizing /logwork dashboard

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -239,7 +239,7 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            ConnextCMS: <span id="app-location">Dashboard</span>
+            RPi-OVN: <span id="app-location">Dashboard</span>
           </h1>
           <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
