--- a/public/js/logwork/templates/leftMenu.html
+++ b/public/js/logwork/templates/leftMenu.html
@@ -29,8 +29,8 @@
   <li class="active"><a href="#" id="dashboardLink"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
   <!-- <li><a href="#" id="pagesLink"><i class="fa fa-link" ></i> <span>Pages</span></a></li>  -->
   
-  <li><a href="#" id="logWorkLink"><i class="fa fa-clock"></i> <span>Log  Work</span></a></li>
-  <li><a href="#" id="viewProjects"><i class="fa fa-clock"></i> <span>View Projects</span></a></li>
+  <li><a href="#" id="logWorkLink"><i class="fa fa-clock-o"></i> <span>Log  Work</span></a></li>
+  <li><a href="#" id="viewProjects"><i class="fa fa-cog"></i> <span>View Projects</span></a></li>
   <!--
   <li class="treeview">
     <a href="#" id="postsLink"><i class="fa fa-newspaper-o"></i> <span>Posts</span> <i class="fa fa-angle-left pull-right"></i></a>
