--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -265,9 +265,11 @@
             </div>
           </div>
           
-          <div class="container" id="dashboardView" hidden>            
-          </div>
+          <div class="container" id="dashboardView" hidden></div>
           
+          <div class="container" id="logWorkView" hidden></div>
+          
+          <!--
           <div class="container" id="pagesView" hidden>            
           </div>
           
@@ -303,6 +305,7 @@
           
           <div class="container" id="sectionsView" hidden>            
           </div>
+          -->
 
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
