--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -3,5 +3,33 @@
     <p>
       This is the logWork View.
     </p>
+    
+    <form class="form-inline">
+      <div class="form-group input-group date" data-provide="datepicker">
+        <label for="logDate">Date</label>
+        <input type="text" class="form-control datepicker" id="logDate" placeholder="" data-date-auto-close="true">
+        <!-- required for datepicker -->
+        <div class="input-group-addon" style="opacity: 0;"></div>
+      </div>
+      
+      <div class="form-group">
+        <label for="logWorkType">Type of Work:</label>
+        <select class="form-control" id="logWorkType">
+          <option>Type 1</option>
+          <option>Type 2</option>
+          <option>Type 3</option>
+        </select>
+      </div>
+      
+      <br />
+      <div class="form-group">
+        <label for="logDesc">Description of Work:</label>
+        <input typ="textarea" class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did.">
+      </div>
+      
+      <br />
+      <button type="submit" class="btn btn-default">Send invitation</button>
+    </form>
+    
   </div>
 </div>
