adding Log Work view.

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -21,11 +21,24 @@
         </select>
       </div>
       
+      <div class="form-group">
+        <!-- <label for="logProject">Type of Work:</label> -->
+        <select class="form-control" id="logProject">
+          <option>Project 1</option>
+          <option>Project 2</option>
+          <option>Project 3</option>
+        </select>
+      </div>
+      
+      <div class="form-group">
+        <input type="number" class="form-control" id="logHour" placeholder=""><span>hrs</span>
+      </div>
+      
       <br />
       
       <div class="form-group">
         <label for="logDesc">Description of Work:</label><br />
-        <input typ="textarea" class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did.">
+        <input type="textarea" class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did.">
       </div>
       
       <br />
