--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -31,7 +31,7 @@
       </div>
       
       <div class="form-group">
-        <input type="number" class="form-control" id="logHour" placeholder=""><span>hrs</span>
+        <input type="number" class="form-control" id="logHour" placeholder="" step="0.25"><span>hours</span>
       </div>
       
       <br />
