adding Log Work view.

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -38,7 +38,7 @@
       
       <div class="form-group">
         <label for="logDesc">Description of Work:</label><br />
-        <input type="textarea" class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did.">
+        <textarea class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did."></textarea>
       </div>
       
       <br />
